# morphik-core

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  DOCKER.md  LICENSE  README.md  abc  base_comand.txt  base_embedding_model.py  base_parser.py  base_planner.py  base_vector_store.py  config.toml  core.py  databridge.py  databridge.toml  databridge_uri.py  design.md  docker-compose.yml  docker-compose.yml.bak  dockerfile  document.py  fly.toml  generate_local_uri.py  google_python_style_guide.html  init.sql  mongo_vector_store.py  morphik.toml  ollama-entrypoint.sh  openai_embedding_model.py  package-lock.json  postgres.dockerfile  printer.py  pyproject.toml  pytest.ini  python_files_contents.txt  quick_setup.py  (+7 more)
.github/workflows/: claude.yml  docker-build.yml  docker-publish.yml  python-lint.yml
core/: .env.test  agent.py  api.py  app_factory.py  auth.py  auth_utils.py  config.py  databridge.py  dependencies.py  document.py  limits_utils.py  logging_config.py  main.py  services_init.py
core/cache/: base_cache.py  base_cache_factory.py  hf_cache.py  llama_cache.py  llama_cache_factory.py
core/completion/: __init__.py  base_completion.py  litellm_completion.py  ollama_completion.py  openai_completion.py
core/database/: base_database.py  mongo_database.py  postgres_database.py  user_limits_db.py
core/embedding/: __init__.py  base_embedding_model.py  colpali_api_embedding_model.py  colpali_embedding_model.py  litellm_embedding.py  ollama_embedding_model.py  openai_embedding_model.py
core/embedding_model/: openai_embedding_model.py
core/models/: app_metadata.py  apps.py  auth.py  chat.py  chunk.py  completion.py  documents.py  folders.py  graph.py  prompts.py  request.py  rules.py  tiers.py  time_series.py  user_limits.py  video.py
core/parser/: base_parser.py  combined_parser.py  contextual_parser.py  databridge_parser.py  morphik_parser.py  unstructured_parser.py
core/planner/: simple_planner.py
core/reranker/: __init__.py  base_reranker.py  bge_reranker.py  flag_reranker.py
core/routes/: ingest.py
core/services/: app_provisioning_service.py  document_service.py  entity_resolution.py  graph_service.py  morphik_graph_service.py  neon_client.py  rules_processor.py  telemetry.py  uri_service.py  user_service.py
core/storage/: base_storage.py  local_storage.py  s3_storage.py  utils_file_extensions.py
core/tests/: __init__.py  conftest.py  test_video_parser_manual.py
core/tools/: agent_roadmap.json  analysis_tools.py  descriptions.json  document_tools.py  graph_tools.py  graph_tools_api.py  tools.py
core/utils/: agent_helpers.py  aws_utils.py
core/vector_store/: base_vector_store.py  milvus_multivector_store.py  milvus_vector_store.py  mongo_vector_store.py  multi_vector_store.py  pgvector_store.py
core/workers/: __init__.py  ingestion_worker.py
docs/: telemetry.md
ee/: LICENSE  __init__.py  config.py  db_router.py  ee.toml
ee/routers/: __init__.py  apps.py  cloud_uri.py  connectors_router.py
ee/services/: connector_service.py
ee/ui-component/: .prettierrc  PUBLISHING.md  README.md  morphik-ui-0.2.7.tgz  package.json  tailwind.config.ts  tsconfig.json  tsup.config.ts
evaluations/: hotpot_ragas_eval.py
evaluations/Science graphs (SciER)/: README.md  count_entities.py  data_loader.py  evaluate_result.py  scier_evaluation.py
examples/: basic_operations.py  batch_operations.py  cache_augmented_generation.py  colpali.py  image_rules_example.py  knowledge_graphs.py  multi_app_user_scoping.py  prompt_overrides.py  rules_engine.py  simple_example.py
sanity_checks/: mongo.py
scripts/: README.md  clear_tables.sh  format.sh  migrate_multivector_embeddings.py  migrate_multivector_to_external_storage.py  scrub_metadata.py
sdks/python/: PUBLISH.md  README.md  pyproject.toml  setup.py  test_requirements.txt
sdks/python/databridge/: __init__.py  async_.py  client.py  exceptions.py  models.py  rules.py  sync.py  types.py
sdks/python/examples/: basic_usage.py  debug.py
sdks/python/morphik/: __init__.py  _internal.py  async_.py  exceptions.py  models.py  rules.py  sync.py
sdks/python/morphik/tests/: README.md  example_usage.py  test_async.py  test_sync.py
sdks/python/morphik/tests/test_docs/: sample1.txt  sample2.txt  sample3.txt
ui-component/: .npmignore  PUBLISHING.md  README.md  package-lock.json  package.json  tsconfig.lib.json  tsup.config.ts
ui-component/app/: layout.tsx  page.tsx
ui-component/components/: ForceGraphComponent.tsx  GraphSection.tsx  MorphikUI.tsx  NotebookSection.tsx  mode-toggle.tsx  types.ts
ui-component/lib/: utils.ts  (+2 more)
utils/: patching.py  patching_test.py  printer.py
(+84 files in other folders)
