[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databridge-client"
version = "0.1.6"
authors = [
    { name = "DataBridge", email = "databridgesuperuser@gmail.com" },
]
description = "DataBridge Python Client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pyjwt>=2.0.0",
    "pydantic==2.10.3",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
packages = ["databridge"]

[tool.hatch.build.targets.sdist]
include = [
    "/databridge",
]
